# Q.apk

./: README.md  build.gradle  gradle.properties  settings.gradle  settings.gradle.kts
.github/workflows/: android_build.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.cpp  native-lib.cpp
app/src/main/cpp/KittyMemory/: CMakeLists.txt  KittyInclude.hpp  KittyMemory.cpp  KittyMemory.hpp  KittyScanner.cpp  KittyScanner.hpp  Kittymemory.cpp  Kittymemory.h  MemoryPatch.hpp
app/src/main/cpp/include/: offset.h
app/src/main/cpp/modules/: Aimbot.cpp  Bypass.cpp  Esp.cpp  Weapon.cpp
app/src/main/java/com/internal/asp1rin/launcher/: MainActivity.kt
app/src/main/res/drawable/: png
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: themes.xml
